--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -11,18 +11,27 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+
       - name: Checkout
         uses: actions/checkout@v2
+
       - name: Set up JDK 16
         uses: actions/setup-java@v2
         with:
           java-version: '16'
           distribution: 'adopt'
+
       - name: Test with Maven
         run: mvn clean test
+
       - name: Publish Test Report
-        if: ${{ always() }}
-        uses: deblockt/cucumber-report-annotations-action@v1.7
+        if: always()
+        run: |
+          mkdir public
+          cp target/lp_report.html public/index.html
+        uses: crazy-max/ghaction-github-pages@v2
         with:
-          access-token: ${{ secrets.GITHUB_TOKEN }}
-          path: '**/target/lp_reports/lp_report.json'
+          target_branch: master
+          build_dir: public
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
