--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,11 +24,13 @@ jobs:
       - name: Test with Maven
         run: mvn clean test
 
-      - name: Publish Test Report
-        if: always()
+      - name: Getting Report Ready
         run: |
           mkdir public
           cp target/lp_report.html public/index.html
+
+      - name: Publish Test Report
+        if: always()
         uses: crazy-max/ghaction-github-pages@v2
         with:
           target_branch: master
